--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -210,13 +210,21 @@ jobs:
         run: |
           ROOT_DIR=$(realpath $PWD)
           echo "::notice ::building - stream-applications-build"
+          set -e
           $ROOT_DIR/mvnw ${{ inputs.verbose && '--debug' || '' }} -s $ROOT_DIR/.settings.xml deploy -f stream-applications-build
+          set +e
           echo "::notice ::building - functions"
+          set -e
           $ROOT_DIR/mvnw ${{ inputs.verbose && '--debug' || '' }} -T 1.5C -s $ROOT_DIR/.settings.xml deploy -f functions
+          set +e
           echo "::notice ::building - function-dependencies"
+          set -e
           $ROOT_DIR/mvnw ${{ inputs.verbose && '--debug' || '' }} -s $ROOT_DIR/.settings.xml deploy -f functions/function-dependencies
+          set +e
           echo "::notice ::building - stream-applications-core"
+          set -e
           $ROOT_DIR/mvnw ${{ inputs.verbose && '--debug' || '' }} -s $ROOT_DIR/.settings.xml deploy -f applications/stream-applications-core
+          set +e
           echo "::notice ::core build completed"
   # Build and tests apps and publishes to repo and creates container
   processors:
@@ -226,7 +234,6 @@ jobs:
       - parameters
     strategy:
       fail-fast: false
-      max-parallel: 4
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.processors) }}
     runs-on: ubuntu-latest
@@ -270,7 +277,6 @@ jobs:
       - parameters
     strategy:
       fail-fast: false
-      max-parallel: 4
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.sinks) }}
     runs-on: ubuntu-latest
@@ -315,7 +321,6 @@ jobs:
     strategy:
       fail-fast: false
       # will be removed when private runners are used.
-      max-parallel: 4
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.sources) }}
     runs-on: ubuntu-latest
