--- a/.github/workflows/recreate-runners.yml
+++ b/.github/workflows/recreate-runners.yml
@@ -77,6 +77,7 @@ jobs:
       - name: 'Configure: install helm'
         uses: azure/setup-helm@v3
         with:
+          version: '3.9.0'
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: install gcloud cli'
         if: ${{ env.RUNNER_TYPE == 'gke' }}
