--- a/stream-applications-release-train/stream-applications-docs/pom.xml
+++ b/stream-applications-release-train/stream-applications-docs/pom.xml
@@ -16,8 +16,10 @@
         <docs.resources.version>0.2.5</docs.resources.version>
         <rootDir>${basedir}/../..</rootDir>
         <!-- These versions aren't exposed even thought they are import from spring-boot-dependencies -->
-        <spring-integration.version>6.1.0</spring-integration.version>
-        <hazelcast.version>5.2.3</hazelcast.version>
+        <spring-integration.version>6.1.1</spring-integration.version>
+        <spring-integration-hazelcast.version>6.1.1</spring-integration-hazelcast.version>
+        <hazelcast.version>5.2.4</hazelcast.version>
+        <aws.version>2.20.63</aws.version>
     </properties>
     <repositories>
         <repository>
@@ -379,9 +381,14 @@
                                 <configuration>
                                     <additionalDependencies>
                                         <dependency>
-                                            <groupId>com.amazonaws</groupId>
-                                            <artifactId>aws-java-sdk-dynamodb</artifactId>
-                                            <version>${aws-java-sdk.version}</version>
+                                            <groupId>org.springframework.integration</groupId>
+                                            <artifactId>spring-integration-aws</artifactId>
+                                            <version>${spring-integration-aws.version}</version>
+                                        </dependency>
+                                        <dependency>
+                                            <groupId>software.amazon.awssdk</groupId>
+                                            <artifactId>dynamodb</artifactId>
+                                            <version>${aws.version}</version>
                                         </dependency>
                                         <dependency>
                                             <groupId>org.apache.curator</groupId>
@@ -465,7 +472,7 @@
                             <dependency>
                                 <groupId>org.asciidoctor</groupId>
                                 <artifactId>asciidoctorj-pdf</artifactId>
-                                <version>2.3.7</version>
+                                <version>2.3.9</version>
                             </dependency>
                             <dependency>
                                 <groupId>io.spring.asciidoctor.backends</groupId>
@@ -482,11 +489,11 @@
                                 </goals>
                                 <configuration>
                                     <backend>spring-html</backend>
-                                    <sourceHighlighter>highlight.js</sourceHighlighter>
                                     <outputDirectory>${project.build.directory}/contents/reference/html
                                     </outputDirectory>
-                                    <sectids>false</sectids>
                                     <attributes>
+                                        <sectids>false</sectids>
+                                        <source-highlighter>highlight.js</source-highlighter>
                                         <project-version>${project.version}</project-version>
                                         <docinfo>shared</docinfo>
                                         <linkcss>true</linkcss>
@@ -500,7 +507,6 @@
                                     </attributes>
                                 </configuration>
                             </execution>
-
                             <execution>
                                 <id>pdf</id>
                                 <phase>generate-resources</phase>
@@ -509,15 +515,13 @@
                                 </goals>
                                 <configuration>
                                     <backend>pdf</backend>
-
                                     <outputDirectory>${project.build.directory}/contents/reference/pdf</outputDirectory>
-                                    <sourceHighlighter>coderay</sourceHighlighter>
                                     <attributes>
+                                        <source-highlighter>coderay</source-highlighter>
                                         <stream-apps-folder>${rootDir}</stream-apps-folder>
                                     </attributes>
                                 </configuration>
                             </execution>
-
                         </executions>
 
                         <configuration>
