--- a/.github/workflows/apps-plugin-ci.yml
+++ b/.github/workflows/apps-plugin-ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Apps Plugin (Snapshot)
 
 on:
   workflow_dispatch:
@@ -18,12 +18,6 @@ jobs:
         working-directory: spring-cloud-dataflow-apps-plugin
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-m2-
       - uses: actions/setup-java@v3
         with:
           java-version: '8'
@@ -37,6 +31,12 @@ jobs:
           version: 1.46.4
         env:
           JF_ARTIFACTORY_SPRING: ${{ secrets.JF_ARTIFACTORY_SPRING }}
+      - uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-m2-
       - name: Configure JFrog Cli
         run: |
           jfrog rt mvnc \
@@ -44,15 +44,14 @@ jobs:
             --server-id-deploy=repo.spring.io \
             --repo-resolve-releases=libs-milestone \
             --repo-resolve-snapshots=libs-snapshot \
-            --repo-deploy-releases=libs-release-local \
+            --repo-deploy-releases=libs-milestone-local \
             --repo-deploy-snapshots=libs-snapshot-local
-          echo JFROG_CLI_BUILD_NAME=spring-cloud-dataflow-apps-plugin-main >> $GITHUB_ENV
+          echo JFROG_CLI_BUILD_NAME=spring-cloud-dataflow-apps-plugin-main-snapshot >> $GITHUB_ENV
           echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
-          echo spring_cloud_dataflow_apps_plugin_version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout) >> $GITHUB_ENV
       - name: Build and Publish
         run: |
-          mvn clean
-          jfrog rt mvn -gs settings.xml -Pfull -B install
+          jfrog rt build-clean
+          jfrog rt mvn -gs settings.xml -Pfull,deploymentfiles -B install 
           jfrog rt build-publish
       - name: Capture Test Results
         if: ${{ always() }}
