--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -29,7 +29,7 @@ jobs:
         if: ${{ github.base_ref != 'main' }}
         uses: actions/setup-java@v1
         with:
-          java-version: ${{ needs.parameters.outputs.jdk_build }}
+          java-version: 17
       - name: 'Configure: Install GraalVM'
         if: ${{ github.base_ref == 'main' }}
         uses: graalvm/setup-graalvm@v1
