This is 2022.0.x w/ no changes. Will it pass CI?

--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -59,6 +59,8 @@
         <curator.version>5.5.0</curator.version>
         <mavenThreads>1</mavenThreads>
 
+		<!-- NO CHANGES - JUST TESTING -->
+
 		<!--suppress UnresolvedMavenProperty -->
 		<buildName>${env.BUILD_NAME}</buildName>
 		<!--suppress UnresolvedMavenProperty -->
