--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -59,7 +59,7 @@
         <curator.version>5.5.0</curator.version>
         <mavenThreads>1</mavenThreads>
 
-		<!-- NO CHANGES - JUST TESTING -->
+		<!-- NO CHANGES - JUST TESTING (take 2) -->
 
 		<!--suppress UnresolvedMavenProperty -->
 		<buildName>${env.BUILD_NAME}</buildName>
