--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -137,7 +137,7 @@ jobs:
         run: echo "::info ::Built"
   done:
     runs-on: ubuntu-latest
-    needs: [ scan ]
+    needs: [ build ]
     steps:
       - name: 'Done'
         shell: bash
