--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -6,7 +6,7 @@ on:
 env:
   MAIN_PATH: 'build-dir'
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  MAVEN_THREADS: 'false'
+  MAVEN_THREADS: 'true'
 jobs:
   build:
     if: github.repository == 'spring-cloud/stream-applications'
@@ -26,12 +26,11 @@ jobs:
         shell: bash
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
       - name: 'Configure: Install Java'
-        if: ${{ github.base_ref != 'main' }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
-          java-version: ${{ needs.parameters.outputs.jdk_build }}
-      - name: 'Configure: Install GraalVM'
-        if: ${{ github.base_ref == 'main' }}
+          java-version: 17
+          distribution: 'graalvm'
+      - name: 'Configure: GraalVM'
         uses: graalvm/setup-graalvm@v1
         with:
           version: 'latest'
@@ -54,51 +53,10 @@ jobs:
         env:
           VERBOSE: ${{ github.debug && 'true' || '' }}
         run: |
-          PR=$(echo "${{ github.ref_name }}" | grep -o '[[:digit:]]*')
-          echo "Checking out pull request #$PR"
-          gh pr checkout $PR
-          BUILD_DIR=$(realpath $MAIN_PATH)
-          echo "Changed files:"
-          gh pr diff --name-only
-          CHANGED=$(gh pr diff --name-only)
-          $BUILD_DIR/scripts/determine-modules-changed.sh "$CHANGED"
-          MODULES=$(jq '.[]' modules.json | sed 's/\"//g')
-          FOLDERS=
-          ROOT_MODULES=
-          if [ "$MAVEN_THREADS" = "true" ]; then
-            MVN_THR="-T 0.5C"
-          else
-            MVN_THR=
-          fi
-          MAVEN_OPTS="-s $BUILD_DIR/.settings.xml -B -U $MVN_THR"
-          echo "VERBOSE=$VERBOSE"
-          if [ "$VERBOSE" = "true" ]; then
-            MAVEN_OPTS="-X $MAVEN_OPTS"
-          fi
-          for module in $MODULES; do
-            if [ "$FOLDERS" = "" ]; then
-              FOLDERS="$module"
-            else
-              FOLDERS="$FOLDERS,$module"
-            fi
-          done
-          set +e
-          if [ "$FOLDERS" != "" ]; then
-            echo "::notice::install $FOLDERS and dependents"
-            echo "::debug::MAVEN:./mvnw $MAVEN_OPTS -amd -pl $FOLDERS install"
-            ./mvnw $MAVEN_OPTS -amd -pl $FOLDERS install
-            RC=$?
-            if ((RC!=0)); then
-              exit $RC
-            fi
-          fi
-      - name: 'Configure: Install Trivy'
-        uses: ./.github/actions/install-trivy
-      - name: 'Action: Trivy scan'
-        shell: bash
-        run: |
-          BUILD_DIR=$(realpath $MAIN_PATH)
-          $BUILD_DIR/scan-folders.sh table
+          export SKIP_DEPLOY=true
+          ./build-core.sh "-T 1C install -Psnapshot"
+          ./build-apps.sh "-T 1C install -Psnapshot"
+          ./integration-tests.sh
       - name: 'Upload: Error logs'
         if: ${{ failure() }}
         uses: actions/upload-artifact@v3
@@ -110,3 +68,24 @@ jobs:
       - name: 'Built'
         shell: bash
         run: echo "::info ::Built"
+  scan:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run Trivy vulnerability scanner in repo mode
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          ignore-unfixed: true
+          format: 'table'
+          severity: 'CRITICAL,HIGH'
+      - name: 'Scanned'
+        shell: bash
+        run: echo "::info ::Scanned"
+  done:
+    runs-on: ubuntu-latest
+    needs: [ scan, build ]
+    steps:
+      - name: 'Done'
+        shell: bash
+        run: echo "::info ::Done"
