--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -177,16 +177,16 @@ jobs:
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
       - name: 'Configure: Install Java'
         if: ${{ needs.parameters.outputs.jdk_build == '8' }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ needs.parameters.outputs.jdk_build }}
+          distribution: 'liberica'
       - name: 'Configure: Install GraalVM'
         if: ${{ needs.parameters.outputs.jdk_build != '8' }}
-        uses: graalvm/setup-graalvm@v1
+        uses: actions/setup-java@v4
         with:
-          version: 'latest'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-          components: 'js'
+          distribution: 'graalvm'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
@@ -321,16 +321,16 @@ jobs:
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
       - name: 'Configure: Install Java'
         if: ${{ needs.parameters.outputs.jdk_build == '8' }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ needs.parameters.outputs.jdk_build }}
+          distribution: 'liberica'
       - name: 'Configure: Install GraalVM'
         if: ${{ needs.parameters.outputs.jdk_build != '8' }}
-        uses: graalvm/setup-graalvm@v1
+        uses: actions/setup-java@v4
         with:
-          version: 'latest'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-          components: 'js'
+          distribution: 'graalvm'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
@@ -461,17 +461,16 @@ jobs:
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
       - name: 'Configure: Install Java'
         if: ${{ needs.parameters.outputs.jdk_build == '8' }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ needs.parameters.outputs.jdk_build }}
+          distribution: 'liberica'
       - name: 'Configure: Install GraalVM'
         if: ${{ needs.parameters.outputs.jdk_build != '8' }}
-        uses: graalvm/setup-graalvm@v1
+        uses: actions/setup-java@v4
         with:
-          version: 'latest'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-          components: 'js'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          distribution: 'graalvm'
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
         with:
@@ -762,13 +761,14 @@ jobs:
               echo "::info ::$MESSAGE"
             fi          
           popd > /dev/null
-      - uses: jfrog/setup-jfrog-cli@v3
+      - uses: jfrog/setup-jfrog-cli@v4
         env:
           JF_URL: 'https://repo.spring.io'
-          JF_ENV_1: ${{ secrets.JF_ARTIFACTORY_SPRING }}
+          JF_ACCESS_TOKEN: ${{ secrets.JF_ARTIFACTORY_SPRING }}
       - name: Configure JFrog Cli
         shell: bash
         run: |
+          jfrog rt ping
           ./configure-jfrog.sh ${{ needs.parameters.outputs.build_version_type }}          
           echo JFROG_CLI_BUILD_NAME=stream-apps-main-release >> $GITHUB_ENV
           echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
