--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -10,7 +10,7 @@ env:
 jobs:
   build:
     if: github.repository == 'spring-cloud/stream-applications'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu22-8-32-OSS
     steps:
       - name: 'Configure: checkout stream-applications@${{ github.ref_name }}'
         uses: actions/checkout@v3
@@ -27,81 +27,13 @@ jobs:
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
       - name: 'Configure: Install Java'
         if: ${{ github.base_ref != 'main' }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
-          java-version: ${{ needs.parameters.outputs.jdk_build }}
-      - name: 'Configure: Install GraalVM'
-        if: ${{ github.base_ref == 'main' }}
-        uses: graalvm/setup-graalvm@v1
-        with:
-          version: 'latest'
           java-version: '17'
-          components: 'js'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: 'Configure: cache for maven dependencies'
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: maven-repo-${{ hashFiles('**/pom.xml') }}-pr-${{ github.base_ref }}
-          restore-keys: |
-            maven-repo-${{ hashFiles('**/pom.xml') }}-pr-${{ github.base_ref }}
-            maven-repo-${{ hashFiles('**/pom.xml') }}
-            maven-repo-
-      - name: 'Configure: Install xsltproc'
-        uses: ./.github/actions/install-xsltproc
-      - name: 'Action: verify changed modules'
+          distribution: graalvm
+      - name: 'Action: Build Core'
         shell: bash
         env:
           VERBOSE: ${{ github.debug && 'true' || '' }}
         run: |
-          PR=$(echo "${{ github.ref_name }}" | grep -o '[[:digit:]]*')
-          echo "Checking out pull request #$PR"
-          gh pr checkout $PR
-          BUILD_DIR=$(realpath $MAIN_PATH)
-          echo "Changed files:"
-          gh pr diff --name-only
-          CHANGED=$(gh pr diff --name-only)
-          $BUILD_DIR/scripts/determine-modules-changed.sh "$CHANGED"
-          MODULES=$(jq '.[]' modules.json | sed 's/\"//g')
-          FOLDERS=
-          ROOT_MODULES=
-          if [ "$MAVEN_THREADS" = "true" ]; then
-            MVN_THR="-T 0.5C"
-          else
-            MVN_THR=
-          fi
-          MAVEN_OPTS="-s $BUILD_DIR/.settings.xml -B -U $MVN_THR"
-          echo "VERBOSE=$VERBOSE"
-          if [ "$VERBOSE" = "true" ]; then
-            MAVEN_OPTS="-X $MAVEN_OPTS"
-          fi
-          for module in $MODULES; do
-            if [ "$FOLDERS" = "" ]; then
-              FOLDERS="$module"
-            else
-              FOLDERS="$FOLDERS,$module"
-            fi
-          done
-          set +e
-          if [ "$FOLDERS" != "" ]; then
-            echo "::notice::install $FOLDERS and dependents"
-            echo "::debug::MAVEN:./mvnw $MAVEN_OPTS -amd -pl $FOLDERS install"
-            ./mvnw $MAVEN_OPTS -amd -pl $FOLDERS install
-            RC=$?
-            if ((RC!=0)); then
-              exit $RC
-            fi
-          fi
-      - name: 'Configure: Install Trivy'
-        uses: ./.github/actions/install-trivy
-      - name: 'Upload: Error logs'
-        if: ${{ failure() }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: 'modified-surefire-reports'
-          path: '**/target/surefire-reports'
-          retention-days: 7
-          if-no-files-found: ignore
-      - name: 'Built'
-        shell: bash
-        run: echo "::info ::Built"
+          ./build-core.sh "-T 1C package -Psnapshot"
